# Coinbox

./: README.md  erase.py  platformio.ini
app/: main.py  pyproject.toml
app/src/coinbox/: __main__.py
docs/: CoinboxStates.drawio  build.html  electronics.html  hardware.html  hardwaredocs.md  software.md  uploading.html
include/: sounds.h
kicad/: CoinBoxV2Lib.kicad_sym  CoinboxV2.kicad_pcb  CoinboxV2.kicad_prl  CoinboxV2.kicad_pro  CoinboxV2.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
kicad/Coinbox.pretty/: ESP32_30pin.kicad_mod  PAM8403 Module.kicad_mod
measurements/: adc_readings_coin.csv  adc_readings_hand.csv  adc_readings_openclose.csv
src/: config.h  main.cpp
tools/: adc_readings.csv  dump.txt  mp3tosample.py  plot.py  plotdump.py  plotmeasure.py  record_ser.py  record_udp.py  u8wav2hdr.py
